<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_study_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="i@todo.todo">i</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend> <!-- 추가된 부분 -->

  <exec_depend>build_interfaces</exec_depend>                    <!-- 추가된 부분 -->
  <exec_depend>rosidl_default_runtime</exec_depend>              <!-- 추가된 부분 -->
  <member_of_group>rosidl_interface_packages</member_of_group>   <!-- 추가된 부분 -->

  <!-- rosidl_default_generators : 코드 생성기( .msg .srv .action 을 각 언어별로 코드로 자동 생성해주는 빌드 도구)
       .msg, .srv, .action 파일을 읽어서 c++, python  등 언어 타입지원 코드를 생성시키고 
       colcon build 시에  msg 파일을 코드로변환하는 역활을 하며 자동실행됨
       build_interfaces : 런타임에서 메시지 타입 사용 가능하게 함
       rosidl_interface_packages : 인터페이스 전용 패키지 만들때 쓰임
   -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
